# complaint-communication-dashboard

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/models/: models.py
backend/app/routers/: analytics.py  complaints.py  messages.py  sla.py  users.py
backend/app/schemas/: schemas.py
backend/app/services/: classification.py  draft_generator.py  duplicate_detector.py  embeddings.py
docs/: API.md  ARCHITECTURE.md  CONTEXT.md  DATABASE.md
